[gd_scene load_steps=5 format=2]

[ext_resource path="res://5. User Interfaces/Textures/Window/64_64/area_over.png" type="Texture" id=1]
[ext_resource path="res://5. User Interfaces/Textures/Window/64_64/area_default.png" type="Texture" id=2]
[ext_resource path="res://5. User Interfaces/Level Map/Level Select Button.gd" type="Script" id=3]
[ext_resource path="res://5. User Interfaces/Level Map/Level Button Font.tres" type="DynamicFont" id=4]

[node name="TextureButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )

[node name="Level Number" type="Label" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Number"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Name1" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Level Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Name2" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 64.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Level Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 64.0
margin_bottom = 52.0

[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
